--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,14 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
+    "dompurify": "^3.3.1",
     "html2pdf.js": "^0.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^10.1.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.21.0",
+    "remark-gfm": "^4.0.1",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
