Enhance AdminDraws and asaasService for improved contest management
- Updated AdminDraws to load official contest references based on selected contest, improving data handling in modals.
- Added UI elements for displaying and managing official contest references, including edit and delete functionalities.
- Refactored asaasService to ensure session refresh before API calls, preventing JWT errors and improving authentication flow.
- Adjusted error handling for session management and ensured proper configuration checks for Supabase keys.

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -350,6 +350,14 @@ authorization_url_path = "/oauth/consent"
 # Allow dynamic client registration
 allow_dynamic_registration = false
 
+# Edge Functions: desativa verify_jwt no gateway. A validação é feita dentro da função.
+# Isso evita 401 "Invalid JWT" após deploy (ex.: rotação de chave JWT, ES256 vs HS256).
+[functions.asaas-create-pix]
+verify_jwt = false
+
+[functions.asaas-webhook]
+verify_jwt = false
+
 [edge_runtime]
 enabled = true
 # Supported request policies: `oneshot`, `per_worker`.
